--- a/FFIAndroidProject/SampleKonyFFI/app/src/main/res/values/strings.xml
+++ b/FFIAndroidProject/SampleKonyFFI/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">samplekonyFFI</string>
+    <string name="app_name">SampleKonyFFI</string>
     <string name="action_settings">Settings</string>
 </resources>
